# rust-chat-server

./: Cargo.toml  README.md  users.db
src/: auth.rs  database.rs  input.rs  main.rs
