[package]
name = "rust-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bcrypt = "0.14.0"
lazy_static = "1.4.0"
sqlite = "0.30.4"
tokio = { version = "1.27", features = ["full"] }
